# foundation

./: Cargo.toml
.github/workflows/: ci.yml  pr.yml
src/: config.rs  constants.rs  hash.rs  http.rs  lib.rs  log.rs
src/aws/: sqs.rs
src/discord/: webhook.rs
src/extensions/: jwt.rs  mod.rs
src/rocket/guards/: authorization.rs  correlation_id.rs  mod.rs
src/types/: graph.rs  jwt.rs  mod.rs  openai.rs  places.rs
