[package]
name = "foundation"
version = "0.7.0"
edition = "2021"
publish  = false

[dependencies]
# aws
aws-config = { version = "0.53.0", optional = true }
aws-sdk-s3 = { version = "0.22.0", optional = true }
aws-sdk-sqs = { version = "0.22.0", optional = true }

# http
reqwest = { version  = "0.11.13", optional = true }
reqwest-retry = { version  = "0.2.1", optional = true }
reqwest-middleware = { version  = "0.2.0", optional = true }
reqwest-tracing = { version  = "0.4.0", optional = true }

# types
serde_json = { version = "1.0.91", optional = true }

# rocket
rocket = { version = "0.5.0-rc.2", optional = true }

# discord
twilight-model = { version = "0.14.0", optional = true }
mime = { version = "0.3.16", optional = true }

# jwt
aliri = { version = "0.6.1", optional = true }
aliri_oauth2 = { version = "0.9.0", optional = true }
aliri_clock = { version = "0.1.4", optional = true }
jwt = "0.16.0"

rust-crypto = "0.2.36"
lazy_static = "1.4.0"
uuid = { version = "1.2.2", features = ["v4"] }
anyhow = "1.0.68"
http = "0.2.8"
log = "0.4.17"
fern = "0.6.1"
serde = "1.0.152"
config = "0.13.3"

[features]
default = []
aws = ["dep:aws-config", "dep:aws-sdk-s3", "dep:aws-sdk-sqs", "dep:serde_json"]
http = ["dep:reqwest", "dep:reqwest-retry", "dep:reqwest-middleware", "dep:reqwest-tracing"]
types = ["dep:serde_json", "dep:twilight-model"]
rocket = ["dep:rocket"]
discord = ["dep:twilight-model", "dep:mime", "http", "dep:serde_json", "types"]
jwt = ["dep:aliri", "dep:aliri_oauth2", "dep:aliri_clock", "types"]
